correcciones de escritura

--- a/companias.html
+++ b/companias.html
@@ -17,83 +17,88 @@
 </head>
 
 <body>
-    <!--Navbar-->
-    <div class="navbar">
-        <div class="container flex">
-            <h1 class="logo">GRM</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="cotiza.html">Cotiza Ahora</a></li>
-                    <li><a href="companias.html">Compañias</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
-    </div>
 
-    <!--Showcase-->
-
-    <section class="company">
-        <h2>Conoce la gran gama de compañias que trabajan con nosotros para facilitar tu vida.</h2>
-    </section>
-
-    <section class="container-company">
-
-        <p class="companyp">
-            Recuerda que cada compañia a sido escogida segun su clasificación de solvencia y solides.
-            Para garantizarte que estes tranquilo ante cualquier eventualidad.
-            Recuerda que este ranking lo puedes verificar en la pagina de la SuperIntendencia de la Nación.
-
-        </p>
-
-        <div class="card" style="width: 15rem;">
-            <img src="imagenes/integrity slider.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Integrity Seguros</h5>
-                <p class="card-text">Automotor, Combinado Familiar, Caucion y Transporte</p>
-                <a href="https://integrityseguros.com.ar/" class="btn btn-primary">Cotiza Ahora</a>
+    <header>
+        <!--Navbar-->
+        <div class="navbar">
+            <div class="container flex">
+                <h1 class="logo">GRM</h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="cotiza.html">Cotiza Ahora</a></li>
+                        <li><a href="companias.html">Compañias</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
+    </header>
 
-        <div class="card" style="width: 15rem;">
-            <img src="imagenes/mercantil-slider.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Mercantil Andina</h5>
-                <p class="card-text">Automotor, Combinado Familiar, Integral de Comercio y Motos.</p>
-                <a href="https://www.mercantilandina.com.ar/" class="btn btn-primary">Cotiza Ahora</a>
+    <main>
+        <!--Showcase-->
+
+        <section class="company">
+            <h2>Conoce la gran gama de compañias que trabajan con nosotros para facilitar tu vida.</h2>
+        </section>
+
+        <section class="container-company">
+
+            <p class="companyp">
+                Recuerda que cada compañia a sido escogida segun su clasificación de solvencia y solides.
+                Para garantizarte que estes tranquilo ante cualquier eventualidad.
+                Recuerda que este ranking lo puedes verificar en la pagina de la SuperIntendencia de la Nación.
+
+            </p>
+
+            <div class="card" style="width: 15rem;">
+                <img src="imagenes/integrity slider.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Integrity Seguros</h5>
+                    <p class="card-text">Automotor, Combinado Familiar, Caucion y Transporte</p>
+                    <a href="https://integrityseguros.com.ar/" class="btn btn-primary">Cotiza Ahora</a>
+                </div>
             </div>
-        </div>
 
-        <div class="card" style="width: 15rem;">
-            <img src="imagenes/fedpat slider.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Federacion Patronal Seguros</h5>
-                <p class="card-text">Automotor, Integral de Comercio, RC, Incendio, TRO, TRC, Seg Tec. </p>
-                <a href="https://www.fedpat.com.ar/" class="btn btn-primary">Cotiza Ahora</a>
+            <div class="card" style="width: 15rem;">
+                <img src="imagenes/mercantil-slider.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Mercantil Andina</h5>
+                    <p class="card-text">Automotor, Combinado Familiar, Integral de Comercio y Motos.</p>
+                    <a href="https://www.mercantilandina.com.ar/" class="btn btn-primary">Cotiza Ahora</a>
+                </div>
             </div>
-        </div>
 
-        <div class="card" style="width: 15rem;">
-            <img src="imagenes/allianz slider.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Allianz</h5>
-                <p class="card-text">Automotor, Cauciones, Accidentes Personales y Moto.</p>
-                <a href="https://www.allianz.com.ar/" class="btn btn-primary">Cotiza Ahora</a>
+            <div class="card" style="width: 15rem;">
+                <img src="imagenes/fedpat slider.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Federacion Patronal Seguros</h5>
+                    <p class="card-text">Automotor, Integral de Comercio, RC, Incendio, TRO, TRC, Seg Tec. </p>
+                    <a href="https://www.fedpat.com.ar/" class="btn btn-primary">Cotiza Ahora</a>
+                </div>
             </div>
-        </div>
 
-        <div class="card" style="width: 15rem;">
-            <img src="imagenes/sura slide.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Sura</h5>
-                <p class="card-text">Automotor, Grandes Flotas, Transporte Maritimo y Seg Tec.</p>
-                <a href="https://www.segurossura.com.ar/" class="btn btn-primary">Cotiza Ahora</a>
+            <div class="card" style="width: 15rem;">
+                <img src="imagenes/allianz slider.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Allianz</h5>
+                    <p class="card-text">Automotor, Cauciones, Accidentes Personales y Moto.</p>
+                    <a href="https://www.allianz.com.ar/" class="btn btn-primary">Cotiza Ahora</a>
+                </div>
             </div>
-        </div>
 
-    </section>
+            <div class="card" style="width: 15rem;">
+                <img src="imagenes/sura slide.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sura</h5>
+                    <p class="card-text">Automotor, Grandes Flotas, Transporte Maritimo y Seg Tec.</p>
+                    <a href="https://www.segurossura.com.ar/" class="btn btn-primary">Cotiza Ahora</a>
+                </div>
+            </div>
+
+        </section>
+    </main>    
 
     <!--footer-->
     <footer class="footer bg-dark py-1">
