--- a/contacto.html
+++ b/contacto.html
@@ -19,36 +19,41 @@
 </head>
 
 <body>
-    <!--Navbar-->
-    <div class="navbar">
-        <div class="container flex">
-            <h1 class="logo">GRM</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="cotiza.html">Cotiza Ahora</a></li>
-                    <li><a href="companias.html">Compañias</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
+
+    <header>
+        <!--Navbar-->
+        <div class="navbar">
+            <div class="container flex">
+                <h1 class="logo">GRM</h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="cotiza.html">Cotiza Ahora</a></li>
+                        <li><a href="companias.html">Compañias</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-    </div>
+    </header>
 
-    <!--Showcase-->
-    <center>
-        <h2>Contacto</h2>
-    </center>
+    <main>
+        <!--Showcase-->
+        <center>
+            <h2>Contacto</h2>
+        </center>
 
-    <h3>Los Campos Marcados con * son Obligarorios</h3>
+        <h3>Los Campos Marcados con * son Obligarorios</h3>
 
-    <section class="cotiza">
-        <input class="itemc" type="text" name="nombre" placeholder="Ingrese Su Nombre*">
-        <input class="itemc" type="text" name="apellido" placeholder="Ingrese Su Apellido*">
-        <input class="itemc" type="text" name="email" placeholder="Ingrese Su Email*">
-        <input class="itemc" type="email" name="motivo" placeholder="Motivo de Consulta*">
-        <button class="buttonc">Enviar</button>
-    </section>
+        <section class="cotiza">
+            <input class="itemc" type="text" name="nombre" placeholder="Ingrese Su Nombre*">
+            <input class="itemc" type="text" name="apellido" placeholder="Ingrese Su Apellido*">
+            <input class="itemc" type="text" name="email" placeholder="Ingrese Su Email*">
+            <input class="itemc" type="email" name="motivo" placeholder="Motivo de Consulta*">
+            <button class="buttonc">Enviar</button>
+        </section>
+    </main>    
 
     <!--footer-->
 
