--- a/index.html
+++ b/index.html
@@ -19,97 +19,103 @@
 </head>
 
 <body>
-    <!--Navbar-->
-    <div class="navbar">
-        <div class="container flex">
-            <h1 class="logo">GRM</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="cotiza.html">Cotizá</a></li>
-                    <li><a href="companias.html">Compañias</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
-    </div>
 
-    <!--Showcase-->
-    <section class="showcase">
-        <div class="container grid">
-            <div class="showcase-text">
-                <h1>Gibaudo Risk Management BROKER</h1>
-                <p>Cotiza con las mejores compañias del mercado.
-                    Para nosotros lo mas importante es tu bienestar.
-                </p>
-                <a href="nosotros.html" class="btn btn-outline">Leer Mas</a>
-            </div>
-
-            <div class="showcase-form card">
-                <h2>Solicita una Cotización</h2>
-                <form>
-                    <div class="form-control">
-                        <input type="text" name="name" placeholder="Nombre Y Apellido" required>
-                    </div>
-                    <div class="form-control">
-                        <input type="text" name="risk" placeholder="Riesgo" required>
-                    </div>
-                    <div class="form-control">
-                        <input type="text" name="email" placeholder="Email" required>
-                    </div>
-                    <input type="submit" value="Enviar" class="btn btn-primary">
-                </form>
+    <header>
+        <!--Navbar-->
+        <div class="navbar">
+            <div class="container flex">
+                <h1 class="logo">GRM</h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="cotiza.html">Cotizá</a></li>
+                        <li><a href="companias.html">Compañias</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
-    </section>
-
-    <!--Stats-->
-    <section class="stats">
-        <div class="container">
-            <center>
-                <h3 class="stats-heading text-center my-1">
-                    Nuestros numeros nos respaldan
-                </h3>
-            </center>
-
-            <div class="grid grid-3 text-center my-4">
-                <div>
-                    <i class="fas fa-server fa-3x"></i>
-                    <h3>18.000</h3>
-                    <p class="text-seconday">Polizas Vigentes</p>
+    </header>    
+    
+    <main>
+        <!--Showcase-->
+        <section class="showcase">
+            <div class="container grid">
+                <div class="showcase-text">
+                    <h1>Gibaudo Risk Management BROKER</h1>
+                    <p>Cotiza con las mejores compañias del mercado.
+                        Para nosotros lo mas importante es tu bienestar.
+                    </p>
+                    <a href="nosotros.html" class="btn btn-outline">Leer Mas</a>
                 </div>
-                <div>
-                    <i class="fas fa-project-diagram fa-3x"></i>
-                    <h3>800</h3>
-                    <p class="text-seconday">Productores</p>
-                </div>
-                <div>
-                    <i class="fas fa-building fa-3x"></i>
-                    <h3>20</h3>
-                    <p class="text-seconday">Compañias</p>
+
+                <div class="showcase-form card">
+                    <h2>Solicita una Cotización</h2>
+                    <form>
+                        <div class="form-control">
+                            <input type="text" name="name" placeholder="Nombre Y Apellido" required>
+                        </div>
+                        <div class="form-control">
+                            <input type="text" name="risk" placeholder="Riesgo" required>
+                        </div>
+                        <div class="form-control">
+                            <input type="text" name="email" placeholder="Email" required>
+                        </div>
+                        <input type="submit" value="Enviar" class="btn btn-primary">
+                    </form>
                 </div>
             </div>
-        </div>
-    </section>
-    <!--Compañias-->
+        </section>
 
-    <section class="companias">
-        <h2 class="md text-center my-2">
-            Compañias que Confian en Nosotros
-        </h2>
-        <div class="container flex">
-            <div class="card">
-                <img src="imagenes/Grupo_Sura_logo.png" alt="imagen logo sura">
+        <!--Stats-->
+        <section class="stats">
+            <div class="container">
+                <center>
+                    <h3 class="stats-heading text-center my-1">
+                        Nuestros numeros nos respaldan
+                    </h3>
+                </center>
+
+                <div class="grid grid-3 text-center my-4">
+                    <div>
+                        <i class="fas fa-server fa-3x"></i>
+                        <h3>18.000</h3>
+                        <p class="text-seconday">Polizas Vigentes</p>
+                    </div>
+                    <div>
+                        <i class="fas fa-project-diagram fa-3x"></i>
+                        <h3>800</h3>
+                        <p class="text-seconday">Productores</p>
+                    </div>
+                    <div>
+                        <i class="fas fa-building fa-3x"></i>
+                        <h3>20</h3>
+                        <p class="text-seconday">Compañias</p>
+                    </div>
+                </div>
             </div>
-            <div class="card">
-                <img src="imagenes/allianz-logo.png" alt="imagen logo">
+        </section>
+        <!--Compañias-->
+
+        <section class="companias">
+            <h2 class="md text-center my-2">
+                Compañias que Confian en Nosotros
+            </h2>
+            <div class="container flex">
+                <div class="card">
+                    <img src="imagenes/Grupo_Sura_logo.png" alt="imagen logo sura">
+                </div>
+                <div class="card">
+                    <img src="imagenes/allianz-logo.png" alt="imagen logo">
+                </div>
+                <div class="card">
+                    <img src="imagenes/federacion-patronal-logo.png" alt="imagen logo fed patronal">
+                </div>
             </div>
-            <div class="card">
-                <img src="imagenes/federacion-patronal-logo.png" alt="imagen logo fed patronal">
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
+        
     <!--footer-->
 
     <footer class="footer bg-dark py-1">
