--- a/nosotros.html
+++ b/nosotros.html
@@ -18,105 +18,109 @@
 </head>
 
 <body>
-    <!--Navbar-->
-    <div class="navbar">
-        <div class="container flex">
-            <h1 class="logo">GRM</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="cotiza.html">Cotiza Ahora</a></li>
-                    <li><a href="companias.html">Compañias</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
-    </div>
 
-    <!--Head-->
-
-    <center>
-        <h1>Nosotros</h1>
-    </center>
-
-    <section class="container-nosotros">
-        <img src="./imagenes/nosotros-1.svg" class="img-nos" alt="">
-        <p class="md text-center my-3">Gibaudo es un Broker Nacido en 1993, Fundado por su Presidente Mariano Nicolas Gibaudo
-            con el
-            fin de ofrecer el mejor servicio para los asegurados que asi lo necesiten.
-            Somos un Broker orientado a todo tipo de negocios, donde siempre damos lo mejor sin importar el tipo de
-            riesgo que
-            el cliente desee asegurar.</p>
-        <img src="./imagenes/nosotros-2.svg" class="img-nos" alt="">
-    </section>
-
-
-    <!--Team-->
-    <center>
-        <h3 class="stats-heading text-center my-3 fs-2">
-            Conoce a Nuestro Equipo
-        </h3>
-    </center>
-
-    <section class="container-team">
-
-        <div class="card" style="width: 12rem;">
-            <img src="https://randomuser.me/api/portraits/men/22.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Uriel Fitipaldy Analista Canal Directo</p>
+    <header>
+        <!--Navbar-->
+        <div class="navbar">
+            <div class="container flex">
+                <h1 class="logo">GRM</h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="cotiza.html">Cotiza Ahora</a></li>
+                        <li><a href="companias.html">Compañias</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
-        <div class="card" style="width: 12rem;">
-            <img src="https://randomuser.me/api/portraits/men/34.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Matia Costansi Analista Canal Directo</p>
-            </div>
-        </div>
-        <div class="card" style="width: 12rem;">
-            <img src="https://randomuser.me/api/portraits/women/11.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Rebecca Galue Analista Canal Productores</p>
-            </div>
-        </div>
-        <div class="card" style="width: 12rem;">
-            <img src="https://randomuser.me/api/portraits/women/12.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Karen Abella Analista Canal Productores</p>
-            </div>
-        </div>
-        <div class="card" style="width: 12rem;">
-            <img src="https://randomuser.me/api/portraits/men/28.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Denis Valera Cobranzas</p>
-            </div>
-        </div>
-        <div class="card" style="width: 12rem;">
-            <img src="https://randomuser.me/api/portraits/women/19.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Deisy Katherine Jaen Recursos Humanos / Scrum</p>
-            </div>
-        </div>
-        <div class="card" style="width: 12rem;">
-            <img src="https://randomuser.me/api/portraits/men/36.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Nicolas Gibaudo Presidente</p>
-            </div>
-        </div>
-        <div class="card" style="width: 12rem;">
-            <img src="https://randomuser.me/api/portraits/men/19.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Cesar Sanchez VicePresidente</p>
-            </div>
-        </div>
-        <div class="card" style="width: 12rem;">
-            <img src="https://randomuser.me/api/portraits/men/1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Saul Gerencia de Finanzas</p>
-            </div>
+    </header>
+    
+    <main>
+        <!--Head-->
 
-    </section>
+        <center>
+            <h1>Nosotros</h1>
+        </center>
 
+        <section class="container-nosotros">
+            <img src="./imagenes/nosotros-1.svg" class="img-nos" alt="">
+            <p class="md text-center my-3">Gibaudo es un Broker Nacido en 1993, Fundado por su Presidente Mariano Nicolas Gibaudo
+                con el
+                fin de ofrecer el mejor servicio para los asegurados que asi lo necesiten.
+                Somos un Broker orientado a todo tipo de negocios, donde siempre damos lo mejor sin importar el tipo de
+                riesgo que
+                el cliente desee asegurar.</p>
+            <img src="./imagenes/nosotros-2.svg" class="img-nos" alt="">
+        </section>
+
+
+        <!--Team-->
+        <center>
+            <h3 class="stats-heading text-center my-3 fs-2">
+                Conoce a Nuestro Equipo
+            </h3>
+        </center>
+
+        <section class="container-team">
+
+            <div class="card" style="width: 12rem;">
+                <img src="https://randomuser.me/api/portraits/men/22.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Uriel Fitipaldy Analista Canal Directo</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="https://randomuser.me/api/portraits/men/34.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Matia Costansi Analista Canal Directo</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="https://randomuser.me/api/portraits/women/11.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Rebecca Galue Analista Canal Productores</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="https://randomuser.me/api/portraits/women/12.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Karen Abella Analista Canal Productores</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="https://randomuser.me/api/portraits/men/28.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Denis Valera Cobranzas</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="https://randomuser.me/api/portraits/women/19.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Deisy Katherine Jaen Recursos Humanos / Scrum</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="https://randomuser.me/api/portraits/men/36.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Nicolas Gibaudo Presidente</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="https://randomuser.me/api/portraits/men/19.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Cesar Sanchez VicePresidente</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="https://randomuser.me/api/portraits/men/1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Saul Gerencia de Finanzas</p>
+                </div>
+
+        </section>
+    </main>    
 
     <!--footer-->
 
