--- a/cotiza.html
+++ b/cotiza.html
@@ -14,78 +14,83 @@
 </head>
 
 <body>
-    <!--Navbar-->
-    <div class="navbar">
-        <div class="container flex">
-            <h1 class="logo">GRM</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="cotiza.html">Cotiza Ahora</a></li>
-                    <li><a href="companias.html">Compañias</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
-    </div>
 
-    <!--ShowCase-->
-    <h2 class="md text-center my-2">
-        Riesgos que Cotizamos
-    </h2>
-    <section class="riesgos">
-        <div class="card" style="width: 12rem;">
-            <img src="imagenes/ap.svg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Accidentes Personales</p>
+    <header>
+        <!--Navbar-->
+        <div class="navbar">
+            <div class="container flex">
+                <h1 class="logo">GRM</h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="cotiza.html">Cotiza Ahora</a></li>
+                        <li><a href="companias.html">Compañias</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
-        <div class="card" style="width: 12rem;">
-            <img src="imagenes/bici.svg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Bicicletas</p>
-            </div>
-        </div>
-        <div class="card" style="width: 12rem;">
-            <img src="imagenes/caucion.svg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Cauciones</p>
-            </div>
-        </div>
-        <div class="card" style="width: 12rem;">
-            <img src="imagenes/comb.svg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Combinado Familiar</p>
-            </div>
-        </div>
-        <div class="card" style="width: 12rem;">
-            <img src="imagenes/trc.svg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Todo Riesgo Construcción</p>
-            </div>
-        </div>
-        <div class="card" style="width: 12rem;">
-            <img src="imagenes/auto.svg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="md text-center mx-2">Automotor</p>
-            </div>
-        </div>
-    </section>
+    </header>
 
-    <!--Cuadro de Cotización-->
+    <main>
+        <!--ShowCase-->
+        <h2 class="md text-center my-2">
+            Riesgos que Cotizamos
+        </h2>
+        <section class="riesgos">
+            <div class="card" style="width: 12rem;">
+                <img src="imagenes/ap.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Accidentes Personales</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="imagenes/bici.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Bicicletas</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="imagenes/caucion.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Cauciones</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="imagenes/comb.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Combinado Familiar</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="imagenes/trc.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Todo Riesgo Construcción</p>
+                </div>
+            </div>
+            <div class="card" style="width: 12rem;">
+                <img src="imagenes/auto.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="md text-center mx-2">Automotor</p>
+                </div>
+            </div>
+        </section>
 
-    <center>
-        <h2>Solicita tu Cotiazación</h2>
-    </center>
-    <section class="cotiza">
-        <input class="itemc" type="text" name="nombre" placeholder="Ingrese Su Nombre">
-        <input class="itemc" type="text" name="apellido" placeholder="Ingrese Su Apellido">
-        <input class="itemc" type="text" name="email" placeholder="Ingrese Su Email">
-        <input class="itemc" type="email" name="ubicacion" placeholder="Ingrese Su Codigo Postal">
-        <input class="itemc" type="text" name="riesgo" placeholder="Ingrese Tipo de Riesgo">
-        <button class="buttonc">Enviar</button>
-    </section>
+        <!--Cuadro de Cotización-->
+
+        <center>
+            <h2>Solicita tu Cotiazación</h2>
+        </center>
+        <section class="cotiza">
+            <input class="itemc" type="text" name="nombre" placeholder="Ingrese Su Nombre">
+            <input class="itemc" type="text" name="apellido" placeholder="Ingrese Su Apellido">
+            <input class="itemc" type="text" name="email" placeholder="Ingrese Su Email">
+            <input class="itemc" type="email" name="ubicacion" placeholder="Ingrese Su Codigo Postal">
+            <input class="itemc" type="text" name="riesgo" placeholder="Ingrese Tipo de Riesgo">
+            <button class="buttonc">Enviar</button>
+        </section>
+    </main>    
 
     <!--footer-->
 
