--- a/companias.html
+++ b/companias.html
@@ -27,7 +27,7 @@
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
-                        <li><a href="cotiza.html">Cotiza Ahora</a></li>
+                        <li><a href="cotiza.html">Cotizá</a></li>
                         <li><a href="companias.html">Compañias</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -53,7 +53,7 @@
             </p>
 
             <div class="card" style="width: 15rem;">
-                <img src="imagenes/integrity slider.png" class="card-img-top" alt="...">
+                <img src="imagenes/integrity slider.png" class="card-img-top" alt="integrity">
                 <div class="card-body">
                     <h5 class="card-title">Integrity Seguros</h5>
                     <p class="card-text">Automotor, Combinado Familiar, Caucion y Transporte</p>
@@ -62,7 +62,7 @@
             </div>
 
             <div class="card" style="width: 15rem;">
-                <img src="imagenes/mercantil-slider.jpg" class="card-img-top" alt="...">
+                <img src="imagenes/mercantil-slider.jpg" class="card-img-top" alt="mercantil">
                 <div class="card-body">
                     <h5 class="card-title">Mercantil Andina</h5>
                     <p class="card-text">Automotor, Combinado Familiar, Integral de Comercio y Motos.</p>
@@ -71,7 +71,7 @@
             </div>
 
             <div class="card" style="width: 15rem;">
-                <img src="imagenes/fedpat slider.png" class="card-img-top" alt="...">
+                <img src="imagenes/fedpat slider.png" class="card-img-top" alt="patronal">
                 <div class="card-body">
                     <h5 class="card-title">Federacion Patronal Seguros</h5>
                     <p class="card-text">Automotor, Integral de Comercio, RC, Incendio, TRO, TRC, Seg Tec. </p>
@@ -80,7 +80,7 @@
             </div>
 
             <div class="card" style="width: 15rem;">
-                <img src="imagenes/allianz slider.png" class="card-img-top" alt="...">
+                <img src="imagenes/allianz slider.png" class="card-img-top" alt="alianz">
                 <div class="card-body">
                     <h5 class="card-title">Allianz</h5>
                     <p class="card-text">Automotor, Cauciones, Accidentes Personales y Moto.</p>
@@ -89,7 +89,7 @@
             </div>
 
             <div class="card" style="width: 15rem;">
-                <img src="imagenes/sura slide.png" class="card-img-top" alt="...">
+                <img src="imagenes/sura slide.png" class="card-img-top" alt="sura">
                 <div class="card-body">
                     <h5 class="card-title">Sura</h5>
                     <p class="card-text">Automotor, Grandes Flotas, Transporte Maritimo y Seg Tec.</p>
