--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 <body>
 
+    <!--header-->
+
     <header>
         <!--Navbar-->
         <div class="navbar">
@@ -38,6 +40,8 @@
         </div>
     </header>    
     
+    <!--main-->
+
     <main>
         <!--Showcase-->
         <section class="showcase">
@@ -51,7 +55,7 @@
                 </div>
 
                 <div class="showcase-form card">
-                    <h2>Solicita una Cotización</h2>
+                    <h2>Tu cotizacion</h2>
                     <form>
                         <div class="form-control">
                             <input type="text" name="name" placeholder="Nombre Y Apellido" required>
