--- a/cotiza.html
+++ b/cotiza.html
@@ -24,7 +24,7 @@
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
-                        <li><a href="cotiza.html">Cotiza Ahora</a></li>
+                        <li><a href="cotiza.html">Cotizá</a></li>
                         <li><a href="companias.html">Compañias</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -40,37 +40,37 @@
         </h2>
         <section class="riesgos">
             <div class="card" style="width: 12rem;">
-                <img src="imagenes/ap.svg" class="card-img-top" alt="...">
+                <img src="imagenes/ap.svg" class="card-img-top" alt="imagen de hombre lesionado">
                 <div class="card-body">
                     <p class="md text-center mx-2">Accidentes Personales</p>
                 </div>
             </div>
             <div class="card" style="width: 12rem;">
-                <img src="imagenes/bici.svg" class="card-img-top" alt="...">
+                <img src="imagenes/bici.svg" class="card-img-top" alt="imagen hombre andando en bici">
                 <div class="card-body">
                     <p class="md text-center mx-2">Bicicletas</p>
                 </div>
             </div>
             <div class="card" style="width: 12rem;">
-                <img src="imagenes/caucion.svg" class="card-img-top" alt="...">
+                <img src="imagenes/caucion.svg" class="card-img-top" alt="imagen papeleria">
                 <div class="card-body">
                     <p class="md text-center mx-2">Cauciones</p>
                 </div>
             </div>
             <div class="card" style="width: 12rem;">
-                <img src="imagenes/comb.svg" class="card-img-top" alt="...">
+                <img src="imagenes/comb.svg" class="card-img-top" alt="imagen de hogar">
                 <div class="card-body">
                     <p class="md text-center mx-2">Combinado Familiar</p>
                 </div>
             </div>
             <div class="card" style="width: 12rem;">
-                <img src="imagenes/trc.svg" class="card-img-top" alt="...">
+                <img src="imagenes/trc.svg" class="card-img-top" alt="imagen casa en construccion">
                 <div class="card-body">
                     <p class="md text-center mx-2">Todo Riesgo Construcción</p>
                 </div>
             </div>
             <div class="card" style="width: 12rem;">
-                <img src="imagenes/auto.svg" class="card-img-top" alt="...">
+                <img src="imagenes/auto.svg" class="card-img-top" alt="imagen de auto">
                 <div class="card-body">
                     <p class="md text-center mx-2">Automotor</p>
                 </div>
