--- a/nosotros.html
+++ b/nosotros.html
@@ -19,6 +19,8 @@
 
 <body>
 
+    <!--header-->
+
     <header>
         <!--Navbar-->
         <div class="navbar">
@@ -28,7 +30,7 @@
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
-                        <li><a href="cotiza.html">Cotiza Ahora</a></li>
+                        <li><a href="cotiza.html">Cotizá</a></li>
                         <li><a href="companias.html">Compañias</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -36,6 +38,8 @@
             </div>
         </div>
     </header>
+
+    <!--main-->
     
     <main>
         <!--Head-->
@@ -45,14 +49,14 @@
         </center>
 
         <section class="container-nosotros">
-            <img src="./imagenes/nosotros-1.svg" class="img-nos" alt="">
+            <img src="./imagenes/nosotros-1.svg" class="img-nos" alt="chico y chica">
             <p class="md text-center my-3">Gibaudo es un Broker Nacido en 1993, Fundado por su Presidente Mariano Nicolas Gibaudo
                 con el
                 fin de ofrecer el mejor servicio para los asegurados que asi lo necesiten.
                 Somos un Broker orientado a todo tipo de negocios, donde siempre damos lo mejor sin importar el tipo de
                 riesgo que
                 el cliente desee asegurar.</p>
-            <img src="./imagenes/nosotros-2.svg" class="img-nos" alt="">
+            <img src="./imagenes/nosotros-2.svg" class="img-nos" alt="chicha y chica">
         </section>
 
 
@@ -104,7 +108,7 @@
             <div class="card" style="width: 12rem;">
                 <img src="https://randomuser.me/api/portraits/men/36.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <p class="md text-center mx-2">Nicolas Gibaudo Presidente</p>
+                    <p class="md text-center mx-2">Mariano Nicolas Gibaudo Presidente</p>
                 </div>
             </div>
             <div class="card" style="width: 12rem;">
